exercises/00-networking/00-deployment/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superapi
  template:
    metadata:
      labels:
        app: superapi
    spec:
      containers:
      - name: superapi
        image: crazk8skjfsa6ufncm6ehkyi.azurecr.io/super:1.0.3
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080
