exercises/00-networking/00-deployment/manifests/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: superapi
spec:
  podSelector:
    matchLabels:
      app: superapi
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: debug
    - ipBlock:
        # cidr block of app gateway
        cidr: 10.2.0.0/16
